fix: заменил класс wrap на insulin-container

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.wrap {
+.insulin-container {
 	background: #ccc;
 	min-height: 300px;
 	width: 400px;
